# searchSolver

./: BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  Server.h  Solver.h  StringReverser.h  aStar.cpp  aStar.h  graph.cpp  graph.h  main.cpp  myClientHandler.cpp  myClientHandler.h  myParallelServer.cpp  myParallelServer.h  mySerialServer.cpp  mySerialServer.h  mySocket.h  myTestClientHandler.cpp  myTestClientHandler.h  path.cpp  path.h  problem.h  searchSolver.cpp  searchSolver.h  searchable.h  searcher.h  socket.h  solution.h  state.cpp  state.h
